# GameBoy-Emulator

./: README.md
cpp/: CMakeLists.txt  README.md
cpp/src/: cpu.cpp  cpu.h  gba.cpp  gba.h  main.cpp  test.cpp
cpp/src/nlohmann/: json_fwd.hpp
cpp/src/private/: cpu.cpp  cpuDebug.cpp  gb.cpp  gba.cpp  mbc.cpp  mbc0.cpp  mbc1.cpp  mbc2.cpp  mbc3.cpp  memory.cpp  platform.cpp  ppu.cpp
cpp/src/public/: cpu.h  cpuDebug.h  gb.h  gba.h  mbc.h  mbc0.h  mbc1.h  mbc2.h  mbc3.h  memory.h  platform.h  ppu.h
cpp/src/test/: autoTest.cpp  test.cpp  testBlargg.cpp
roms/blargg/: README.md
tests/: README.md
